2005-04-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/performer-init.ly: add CueVoice to MIDI too.

	* ps/music-drawing-routines.ps: new routine BeginEPSF /
	EndEPSF.

	* input/regression/markup-eps.ly: new file.

	* scm/framework-ps.scm (write-preamble): change order: vars should
	be inited before procedures.

	* scm/output-ps.scm (glyph-string): break lines. 255 chars is max
	for EPS files.

	* scm/define-markup-commands.scm (epsfile): add epsfile command.

2005-04-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* configure.in (gui_b): add check for ghostscript 8.15

2005-04-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/hairpin.cc (after_line_breaking): suicide the hairpinlet at
	start of line. Fixes cresc-after-newline.ly

	* lily/source-file.cc (file_line_column_string): use get_column().

2005-04-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/source-file.cc (get_column): utf-8 support for column numbers.

2005-04-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/*: use message () iso progress_indication () for messages.
	Revise/uniformise user messages.

	* flower/warn.cc (progress_indication): New function.
	(message): Use it.  Fixes newline problems.

	* config.make.in (webdir): Sort out install dirs.

	* stepmake/stepmake/generic-targets.make (final-install): Bugfix.

	* python/lilylib.py (command_name): Bugfix.
	(make_ps_images):

2005-04-11  Pedro Kroger  <kroeger@pedrokroeger.net>

	* lily/main.cc: --help says what types of backends are availabe

2005-04-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	Fix ./VERSION dependency, and without need to reconfigure.

	* lily/main.cc (setup_paths): Update.

	* stepmake/bin/make-version.py (defs): Add TOPLEVEL_VERSION define..

	* config.hh.in (LILYPOND_DATADIR): Remove TOPLEVEL_VERSION.

	* scripts/convert-ly.py (\markup): Fix too simplistic regexps.
	Add \line for some simplistic cases.

	* lily/GNUmakefile (main.o): Add missing dependency on version.hh.

2005-04-10  Nicolas Sceaux  <nicolas.sceaux@free.fr>
